@@ -1,4 +1,5 @@
 3.0
+    custom_model_file only accepts file names without path. Use custom_model_folder instead.
     the load method in GraphHopperWeb (client-hc) was removed
     routing.ch.disabling_allowed and routing.lm.disabling_allowed configuration options are no longer supported
     moved the graphhopper-reader-osm module into core, use the graphhopper-core module directly instead. GraphHopperOSM is deprecated, use GraphHopper instead.
